--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^7.0.10",
     "prisma": "^5.0.0",
-    "socket.io": "^4.6.0"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -27,6 +28,8 @@
     "@types/express": "^4.17.0",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^20.0.0",
+    "@types/nodemailer": "^7.0.4",
+    "@types/socket.io": "^3.0.1",
     "dotenv-cli": "^7.0.0",
     "nodemon": "^3.0.0",
     "ts-node": "^10.9.0",
